BCC_BCC36B__P[1]__Noemi_1563882_AnaliseLexica_01/implementação/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIO
    NOVA_LINHA

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     lista_declaracoes -> error
Rule 5     declaracao -> declaracao_variaveis
Rule 6     declaracao -> inicializacao_variaveis
Rule 7     declaracao -> declaracao_funcao
Rule 8     declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis
Rule 9     inicializacao_variaveis -> atribuicao
Rule 10    lista_variaveis -> lista_variaveis VIRGULA var
Rule 11    lista_variaveis -> var
Rule 12    var -> ID
Rule 13    var -> ID indice
Rule 14    var -> ID lista_dimensao
Rule 15    lista_dimensao -> dimensao
Rule 16    lista_dimensao -> lista_dimensao dimensao
Rule 17    dimensao -> ABRE_COL FECHA_COL
Rule 18    indice -> indice ABRE_COL expressao FECHA_COL
Rule 19    indice -> ABRE_COL expressao FECHA_COL
Rule 20    tipo -> INTEIRO
Rule 21    tipo -> FLUTUANTE
Rule 22    declaracao_funcao -> tipo cabecalho
Rule 23    declaracao_funcao -> cabecalho
Rule 24    cabecalho -> ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
Rule 25    lista_parametros -> lista_parametros VIRGULA parametro
Rule 26    lista_parametros -> parametro
Rule 27    lista_parametros -> vazio
Rule 28    parametro -> tipo DOIS_PONTOS var
Rule 29    parametro -> parametro
Rule 30    corpo -> corpo acao
Rule 31    corpo -> vazio
Rule 32    acao -> expressao
Rule 33    acao -> declaracao_variaveis
Rule 34    acao -> se
Rule 35    acao -> repita
Rule 36    acao -> leia
Rule 37    acao -> escreva
Rule 38    acao -> retorna
Rule 39    se -> SE expressao ENTAO corpo FIM
Rule 40    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 41    repita -> REPITA corpo ATE expressao
Rule 42    atribuicao -> var ATRIBUT expressao
Rule 43    atribuicao -> condicional
Rule 44    atribuicao -> NEGACAO condicional
Rule 45    condicional -> expressao_simples operador_relacional expressao_aditiva
Rule 46    condicional -> ABRE_PAR condicional FECHA_PAR
Rule 47    condicional -> condicional simbolo_condicional condicional
Rule 48    simbolo_condicional -> OU_LOGICO
Rule 49    simbolo_condicional -> E_LOGICO
Rule 50    leia -> LEIA ABRE_PAR ID FECHA_PAR
Rule 51    escreva -> ESCREVA ABRE_PAR expressao FECHA_PAR
Rule 52    retorna -> RETORNA ABRE_PAR expressao FECHA_PAR
Rule 53    expressao -> expressao_simples
Rule 54    expressao -> atribuicao
Rule 55    expressao_simples -> expressao_aditiva
Rule 56    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 57    expressao_aditiva -> expressao_multiplicativa
Rule 58    expressao_aditiva -> expressao_aditiva operador_soma expressao_multiplicativa
Rule 59    expressao_multiplicativa -> expressao_unaria
Rule 60    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 61    expressao_unaria -> fator
Rule 62    expressao_unaria -> operador_soma fator
Rule 63    operador_relacional -> MENOR
Rule 64    operador_relacional -> MAIOR
Rule 65    operador_relacional -> IGUAL
Rule 66    operador_relacional -> DIFERENCA
Rule 67    operador_relacional -> MENOR_IGUAL
Rule 68    operador_relacional -> MAIOR_IGUAL
Rule 69    operador_relacional -> NEGACAO
Rule 70    operador_soma -> SOMA
Rule 71    operador_soma -> SUB
Rule 72    operador_multiplicacao -> MULT
Rule 73    operador_multiplicacao -> DIVISAO
Rule 74    fator -> ABRE_COL expressao FECHA_COL
Rule 75    fator -> var
Rule 76    fator -> chamada_funcao
Rule 77    fator -> numero
Rule 78    numero -> INTEIRO
Rule 79    numero -> FLUTUANTE
Rule 80    numero -> NOTACAO_CIENTIFICA
Rule 81    chamada_funcao -> ID ABRE_PAR lista_argumentos FECHA_PAR
Rule 82    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 83    lista_argumentos -> expressao
Rule 84    lista_argumentos -> vazio
Rule 85    vazio -> <empty>

Terminals, with rules where they appear

ABRE_COL             : 17 18 19 74
ABRE_PAR             : 24 46 50 51 52 81
ATE                  : 41
ATRIBUT              : 42
COMENTARIO           : 
DIFERENCA            : 66
DIVISAO              : 73
DOIS_PONTOS          : 8 28
ENTAO                : 39 40
ESCREVA              : 51
E_LOGICO             : 49
FECHA_COL            : 17 18 19 74
FECHA_PAR            : 24 46 50 51 52 81
FIM                  : 24 39 40
FLUTUANTE            : 21 79
ID                   : 12 13 14 24 50 81
IGUAL                : 65
INTEIRO              : 20 78
LEIA                 : 50
MAIOR                : 64
MAIOR_IGUAL          : 68
MENOR                : 63
MENOR_IGUAL          : 67
MULT                 : 72
NEGACAO              : 44 69
NOTACAO_CIENTIFICA   : 80
NOVA_LINHA           : 
OU_LOGICO            : 48
REPITA               : 41
RETORNA              : 52
SE                   : 39 40
SENAO                : 40
SOMA                 : 70
SUB                  : 71
VIRGULA              : 10 25 82
error                : 4

Nonterminals, with rules where they appear

acao                 : 30
atribuicao           : 9 54
cabecalho            : 22 23
chamada_funcao       : 76
condicional          : 43 44 46 47 47
corpo                : 24 30 39 40 40 41
declaracao           : 2 3
declaracao_funcao    : 7
declaracao_variaveis : 5 33
dimensao             : 15 16
escreva              : 37
expressao            : 18 19 32 39 40 41 42 51 52 74 82 83
expressao_aditiva    : 45 55 56 58
expressao_multiplicativa : 57 58 60
expressao_simples    : 45 53 56
expressao_unaria     : 59 60
fator                : 61 62
indice               : 13 18
inicializacao_variaveis : 6
leia                 : 36
lista_argumentos     : 81 82
lista_declaracoes    : 1 2
lista_dimensao       : 14 16
lista_parametros     : 24 25
lista_variaveis      : 8 10
numero               : 77
operador_multiplicacao : 60
operador_relacional  : 45 56
operador_soma        : 58 62
parametro            : 25 26 29
programa             : 0
repita               : 35
retorna              : 38
se                   : 34
simbolo_condicional  : 47
tipo                 : 8 22 28
var                  : 10 11 28 42 75
vazio                : 27 31 84

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) lista_declaracoes -> . error
    (5) declaracao -> . declaracao_variaveis
    (6) declaracao -> . inicializacao_variaveis
    (7) declaracao -> . declaracao_funcao
    (8) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (9) inicializacao_variaveis -> . atribuicao
    (22) declaracao_funcao -> . tipo cabecalho
    (23) declaracao_funcao -> . cabecalho
    (20) tipo -> . INTEIRO
    (21) tipo -> . FLUTUANTE
    (42) atribuicao -> . var ATRIBUT expressao
    (43) atribuicao -> . condicional
    (44) atribuicao -> . NEGACAO condicional
    (24) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (12) var -> . ID
    (13) var -> . ID indice
    (14) var -> . ID lista_dimensao
    (45) condicional -> . expressao_simples operador_relacional expressao_aditiva
    (46) condicional -> . ABRE_PAR condicional FECHA_PAR
    (47) condicional -> . condicional simbolo_condicional condicional
    (55) expressao_simples -> . expressao_aditiva
    (56) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (57) expressao_aditiva -> . expressao_multiplicativa
    (58) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (59) expressao_multiplicativa -> . expressao_unaria
    (60) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (61) expressao_unaria -> . fator
    (62) expressao_unaria -> . operador_soma fator
    (74) fator -> . ABRE_COL expressao FECHA_COL
    (75) fator -> . var
    (76) fator -> . chamada_funcao
    (77) fator -> . numero
    (70) operador_soma -> . SOMA
    (71) operador_soma -> . SUB
    (81) chamada_funcao -> . ID ABRE_PAR lista_argumentos FECHA_PAR
    (78) numero -> . INTEIRO
    (79) numero -> . FLUTUANTE
    (80) numero -> . NOTACAO_CIENTIFICA

    error           shift and go to state 16
    INTEIRO         shift and go to state 18
    FLUTUANTE       shift and go to state 20
    NEGACAO         shift and go to state 17
    ID              shift and go to state 13
    ABRE_PAR        shift and go to state 24
    ABRE_COL        shift and go to state 11
    SOMA            shift and go to state 28
    SUB             shift and go to state 5
    NOTACAO_CIENTIFICA shift and go to state 19

    lista_declaracoes              shift and go to state 14
    atribuicao                     shift and go to state 2
    inicializacao_variaveis        shift and go to state 3
    cabecalho                      shift and go to state 4
    numero                         shift and go to state 6
    programa                       shift and go to state 7
    expressao_aditiva              shift and go to state 8
    operador_soma                  shift and go to state 27
    declaracao_funcao              shift and go to state 22
    expressao_multiplicativa       shift and go to state 23
    expressao_simples              shift and go to state 9
    declaracao_variaveis           shift and go to state 15
    tipo                           shift and go to state 10
    declaracao                     shift and go to state 29
    var                            shift and go to state 25
    fator                          shift and go to state 12
    chamada_funcao                 shift and go to state 26
    expressao_unaria               shift and go to state 1
    condicional                    shift and go to state 21

state 1

    (59) expressao_multiplicativa -> expressao_unaria .

    MULT            reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    DIVISAO         reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    SOMA            reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    SUB             reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    MENOR           reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    MAIOR           reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    IGUAL           reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    DIFERENCA       reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    MENOR_IGUAL     reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    MAIOR_IGUAL     reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    NEGACAO         reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    FECHA_COL       reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    OU_LOGICO       reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    E_LOGICO        reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    FECHA_PAR       reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    VIRGULA         reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    INTEIRO         reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    FLUTUANTE       reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    ID              reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    ABRE_PAR        reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    ABRE_COL        reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    NOTACAO_CIENTIFICA reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    $end            reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    FIM             reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    SE              reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    REPITA          reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    LEIA            reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    ESCREVA         reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    RETORNA         reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    ENTAO           reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    ATE             reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)
    SENAO           reduce using rule 59 (expressao_multiplicativa -> expressao_unaria .)


state 2

    (9) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 9 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 9 (inicializacao_variaveis -> atribuicao .)
    NEGACAO         reduce using rule 9 (inicializacao_variaveis -> atribuicao .)
    ID              reduce using rule 9 (inicializacao_variaveis -> atribuicao .)
    ABRE_PAR        reduce using rule 9 (inicializacao_variaveis -> atribuicao .)
    ABRE_COL        reduce using rule 9 (inicializacao_variaveis -> atribuicao .)
    SOMA            reduce using rule 9 (inicializacao_variaveis -> atribuicao .)
    SUB             reduce using rule 9 (inicializacao_variaveis -> atribuicao .)
    NOTACAO_CIENTIFICA reduce using rule 9 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 9 (inicializacao_variaveis -> atribuicao .)


state 3

    (6) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 6 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 6 (declaracao -> inicializacao_variaveis .)
    NEGACAO         reduce using rule 6 (declaracao -> inicializacao_variaveis .)
    ID              reduce using rule 6 (declaracao -> inicializacao_variaveis .)
    ABRE_PAR        reduce using rule 6 (declaracao -> inicializacao_variaveis .)
    ABRE_COL        reduce using rule 6 (declaracao -> inicializacao_variaveis .)
    SOMA            reduce using rule 6 (declaracao -> inicializacao_variaveis .)
    SUB             reduce using rule 6 (declaracao -> inicializacao_variaveis .)
    NOTACAO_CIENTIFICA reduce using rule 6 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 6 (declaracao -> inicializacao_variaveis .)


state 4

    (23) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 23 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 23 (declaracao_funcao -> cabecalho .)
    NEGACAO         reduce using rule 23 (declaracao_funcao -> cabecalho .)
    ID              reduce using rule 23 (declaracao_funcao -> cabecalho .)
    ABRE_PAR        reduce using rule 23 (declaracao_funcao -> cabecalho .)
    ABRE_COL        reduce using rule 23 (declaracao_funcao -> cabecalho .)
    SOMA            reduce using rule 23 (declaracao_funcao -> cabecalho .)
    SUB             reduce using rule 23 (declaracao_funcao -> cabecalho .)
    NOTACAO_CIENTIFICA reduce using rule 23 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 23 (declaracao_funcao -> cabecalho .)


state 5

    (71) operador_soma -> SUB .

    ABRE_COL        reduce using rule 71 (operador_soma -> SUB .)
    ID              reduce using rule 71 (operador_soma -> SUB .)
    INTEIRO         reduce using rule 71 (operador_soma -> SUB .)
    FLUTUANTE       reduce using rule 71 (operador_soma -> SUB .)
    NOTACAO_CIENTIFICA reduce using rule 71 (operador_soma -> SUB .)
    SOMA            reduce using rule 71 (operador_soma -> SUB .)
    SUB             reduce using rule 71 (operador_soma -> SUB .)


state 6

    (77) fator -> numero .

    MULT            reduce using rule 77 (fator -> numero .)
    DIVISAO         reduce using rule 77 (fator -> numero .)
    SOMA            reduce using rule 77 (fator -> numero .)
    SUB             reduce using rule 77 (fator -> numero .)
    MENOR           reduce using rule 77 (fator -> numero .)
    MAIOR           reduce using rule 77 (fator -> numero .)
    IGUAL           reduce using rule 77 (fator -> numero .)
    DIFERENCA       reduce using rule 77 (fator -> numero .)
    MENOR_IGUAL     reduce using rule 77 (fator -> numero .)
    MAIOR_IGUAL     reduce using rule 77 (fator -> numero .)
    NEGACAO         reduce using rule 77 (fator -> numero .)
    FECHA_COL       reduce using rule 77 (fator -> numero .)
    ATE             reduce using rule 77 (fator -> numero .)
    SE              reduce using rule 77 (fator -> numero .)
    REPITA          reduce using rule 77 (fator -> numero .)
    LEIA            reduce using rule 77 (fator -> numero .)
    ESCREVA         reduce using rule 77 (fator -> numero .)
    RETORNA         reduce using rule 77 (fator -> numero .)
    INTEIRO         reduce using rule 77 (fator -> numero .)
    FLUTUANTE       reduce using rule 77 (fator -> numero .)
    ID              reduce using rule 77 (fator -> numero .)
    ABRE_PAR        reduce using rule 77 (fator -> numero .)
    ABRE_COL        reduce using rule 77 (fator -> numero .)
    NOTACAO_CIENTIFICA reduce using rule 77 (fator -> numero .)
    FIM             reduce using rule 77 (fator -> numero .)
    FECHA_PAR       reduce using rule 77 (fator -> numero .)
    OU_LOGICO       reduce using rule 77 (fator -> numero .)
    E_LOGICO        reduce using rule 77 (fator -> numero .)
    $end            reduce using rule 77 (fator -> numero .)
    VIRGULA         reduce using rule 77 (fator -> numero .)
    ENTAO           reduce using rule 77 (fator -> numero .)
    SENAO           reduce using rule 77 (fator -> numero .)


state 7

    (0) S' -> programa .



state 8

    (55) expressao_simples -> expressao_aditiva .
    (58) expressao_aditiva -> expressao_aditiva . operador_soma expressao_multiplicativa
    (70) operador_soma -> . SOMA
    (71) operador_soma -> . SUB

  ! shift/reduce conflict for SOMA resolved as shift
  ! shift/reduce conflict for SUB resolved as shift
    MENOR           reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    MAIOR           reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    IGUAL           reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    DIFERENCA       reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    MENOR_IGUAL     reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    MAIOR_IGUAL     reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    NEGACAO         reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    FECHA_PAR       reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    VIRGULA         reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    FECHA_COL       reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    INTEIRO         reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    FLUTUANTE       reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    ID              reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    ABRE_PAR        reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    ABRE_COL        reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    NOTACAO_CIENTIFICA reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    $end            reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    FIM             reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    SE              reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    REPITA          reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    LEIA            reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    ESCREVA         reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    RETORNA         reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    ENTAO           reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    ATE             reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    SENAO           reduce using rule 55 (expressao_simples -> expressao_aditiva .)
    SOMA            shift and go to state 28
    SUB             shift and go to state 5

  ! SOMA            [ reduce using rule 55 (expressao_simples -> expressao_aditiva .) ]
  ! SUB             [ reduce using rule 55 (expressao_simples -> expressao_aditiva .) ]

    operador_soma                  shift and go to state 30

state 9

    (45) condicional -> expressao_simples . operador_relacional expressao_aditiva
    (56) expressao_simples -> expressao_simples . operador_relacional expressao_aditiva
    (63) operador_relacional -> . MENOR
    (64) operador_relacional -> . MAIOR
    (65) operador_relacional -> . IGUAL
    (66) operador_relacional -> . DIFERENCA
    (67) operador_relacional -> . MENOR_IGUAL
    (68) operador_relacional -> . MAIOR_IGUAL
    (69) operador_relacional -> . NEGACAO

    MENOR           shift and go to state 36
    MAIOR           shift and go to state 32
    IGUAL           shift and go to state 33
    DIFERENCA       shift and go to state 37
    MENOR_IGUAL     shift and go to state 31
    MAIOR_IGUAL     shift and go to state 38
    NEGACAO         shift and go to state 34

    operador_relacional            shift and go to state 35

state 10

    (8) declaracao_variaveis -> tipo . DOIS_PONTOS lista_variaveis
    (22) declaracao_funcao -> tipo . cabecalho
    (24) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM

    DOIS_PONTOS     shift and go to state 40
    ID              shift and go to state 39

    cabecalho                      shift and go to state 41

state 11

    (74) fator -> ABRE_COL . expressao FECHA_COL
    (53) expressao -> . expressao_simples
    (54) expressao -> . atribuicao
    (55) expressao_simples -> . expressao_aditiva
    (56) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (42) atribuicao -> . var ATRIBUT expressao
    (43) atribuicao -> . condicional
    (44) atribuicao -> . NEGACAO condicional
    (57) expressao_aditiva -> . expressao_multiplicativa
    (58) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (12) var -> . ID
    (13) var -> . ID indice
    (14) var -> . ID lista_dimensao
    (45) condicional -> . expressao_simples operador_relacional expressao_aditiva
    (46) condicional -> . ABRE_PAR condicional FECHA_PAR
    (47) condicional -> . condicional simbolo_condicional condicional
    (59) expressao_multiplicativa -> . expressao_unaria
    (60) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (61) expressao_unaria -> . fator
    (62) expressao_unaria -> . operador_soma fator
    (74) fator -> . ABRE_COL expressao FECHA_COL
    (75) fator -> . var
    (76) fator -> . chamada_funcao
    (77) fator -> . numero
    (70) operador_soma -> . SOMA
    (71) operador_soma -> . SUB
    (81) chamada_funcao -> . ID ABRE_PAR lista_argumentos FECHA_PAR
    (78) numero -> . INTEIRO
    (79) numero -> . FLUTUANTE
    (80) numero -> . NOTACAO_CIENTIFICA

    NEGACAO         shift and go to state 17
    ID              shift and go to state 47
    ABRE_PAR        shift and go to state 24
    ABRE_COL        shift and go to state 11
    SOMA            shift and go to state 28
    SUB             shift and go to state 5
    INTEIRO         shift and go to state 43
    FLUTUANTE       shift and go to state 44
    NOTACAO_CIENTIFICA shift and go to state 19

    expressao_simples              shift and go to state 45
    atribuicao                     shift and go to state 42
    expressao_unaria               shift and go to state 1
    var                            shift and go to state 25
    expressao                      shift and go to state 46
    fator                          shift and go to state 12
    operador_soma                  shift and go to state 27
    numero                         shift and go to state 6
    chamada_funcao                 shift and go to state 26
    expressao_aditiva              shift and go to state 8
    condicional                    shift and go to state 21
    expressao_multiplicativa       shift and go to state 23

state 12

    (61) expressao_unaria -> fator .

    MULT            reduce using rule 61 (expressao_unaria -> fator .)
    DIVISAO         reduce using rule 61 (expressao_unaria -> fator .)
    SOMA            reduce using rule 61 (expressao_unaria -> fator .)
    SUB             reduce using rule 61 (expressao_unaria -> fator .)
    MENOR           reduce using rule 61 (expressao_unaria -> fator .)
    MAIOR           reduce using rule 61 (expressao_unaria -> fator .)
    IGUAL           reduce using rule 61 (expressao_unaria -> fator .)
    DIFERENCA       reduce using rule 61 (expressao_unaria -> fator .)
    MENOR_IGUAL     reduce using rule 61 (expressao_unaria -> fator .)
    MAIOR_IGUAL     reduce using rule 61 (expressao_unaria -> fator .)
    NEGACAO         reduce using rule 61 (expressao_unaria -> fator .)
    ATE             reduce using rule 61 (expressao_unaria -> fator .)
    SE              reduce using rule 61 (expressao_unaria -> fator .)
    REPITA          reduce using rule 61 (expressao_unaria -> fator .)
    LEIA            reduce using rule 61 (expressao_unaria -> fator .)
    ESCREVA         reduce using rule 61 (expressao_unaria -> fator .)
    RETORNA         reduce using rule 61 (expressao_unaria -> fator .)
    INTEIRO         reduce using rule 61 (expressao_unaria -> fator .)
    FLUTUANTE       reduce using rule 61 (expressao_unaria -> fator .)
    ID              reduce using rule 61 (expressao_unaria -> fator .)
    ABRE_PAR        reduce using rule 61 (expressao_unaria -> fator .)
    ABRE_COL        reduce using rule 61 (expressao_unaria -> fator .)
    NOTACAO_CIENTIFICA reduce using rule 61 (expressao_unaria -> fator .)
    FECHA_COL       reduce using rule 61 (expressao_unaria -> fator .)
    FIM             reduce using rule 61 (expressao_unaria -> fator .)
    SENAO           reduce using rule 61 (expressao_unaria -> fator .)
    ENTAO           reduce using rule 61 (expressao_unaria -> fator .)
    FECHA_PAR       reduce using rule 61 (expressao_unaria -> fator .)
    VIRGULA         reduce using rule 61 (expressao_unaria -> fator .)
    OU_LOGICO       reduce using rule 61 (expressao_unaria -> fator .)
    E_LOGICO        reduce using rule 61 (expressao_unaria -> fator .)
    $end            reduce using rule 61 (expressao_unaria -> fator .)


state 13

    (24) cabecalho -> ID . ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (12) var -> ID .
    (13) var -> ID . indice
    (14) var -> ID . lista_dimensao
    (81) chamada_funcao -> ID . ABRE_PAR lista_argumentos FECHA_PAR
    (18) indice -> . indice ABRE_COL expressao FECHA_COL
    (19) indice -> . ABRE_COL expressao FECHA_COL
    (15) lista_dimensao -> . dimensao
    (16) lista_dimensao -> . lista_dimensao dimensao
    (17) dimensao -> . ABRE_COL FECHA_COL

    ABRE_PAR        shift and go to state 48
    ATRIBUT         reduce using rule 12 (var -> ID .)
    MULT            reduce using rule 12 (var -> ID .)
    DIVISAO         reduce using rule 12 (var -> ID .)
    SOMA            reduce using rule 12 (var -> ID .)
    SUB             reduce using rule 12 (var -> ID .)
    MENOR           reduce using rule 12 (var -> ID .)
    MAIOR           reduce using rule 12 (var -> ID .)
    IGUAL           reduce using rule 12 (var -> ID .)
    DIFERENCA       reduce using rule 12 (var -> ID .)
    MENOR_IGUAL     reduce using rule 12 (var -> ID .)
    MAIOR_IGUAL     reduce using rule 12 (var -> ID .)
    NEGACAO         reduce using rule 12 (var -> ID .)
    ABRE_COL        shift and go to state 49

    lista_dimensao                 shift and go to state 50
    dimensao                       shift and go to state 52
    indice                         shift and go to state 51

state 14

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (5) declaracao -> . declaracao_variaveis
    (6) declaracao -> . inicializacao_variaveis
    (7) declaracao -> . declaracao_funcao
    (8) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (9) inicializacao_variaveis -> . atribuicao
    (22) declaracao_funcao -> . tipo cabecalho
    (23) declaracao_funcao -> . cabecalho
    (20) tipo -> . INTEIRO
    (21) tipo -> . FLUTUANTE
    (42) atribuicao -> . var ATRIBUT expressao
    (43) atribuicao -> . condicional
    (44) atribuicao -> . NEGACAO condicional
    (24) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (12) var -> . ID
    (13) var -> . ID indice
    (14) var -> . ID lista_dimensao
    (45) condicional -> . expressao_simples operador_relacional expressao_aditiva
    (46) condicional -> . ABRE_PAR condicional FECHA_PAR
    (47) condicional -> . condicional simbolo_condicional condicional
    (55) expressao_simples -> . expressao_aditiva
    (56) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (57) expressao_aditiva -> . expressao_multiplicativa
    (58) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (59) expressao_multiplicativa -> . expressao_unaria
    (60) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (61) expressao_unaria -> . fator
    (62) expressao_unaria -> . operador_soma fator
    (74) fator -> . ABRE_COL expressao FECHA_COL
    (75) fator -> . var
    (76) fator -> . chamada_funcao
    (77) fator -> . numero
    (70) operador_soma -> . SOMA
    (71) operador_soma -> . SUB
    (81) chamada_funcao -> . ID ABRE_PAR lista_argumentos FECHA_PAR
    (78) numero -> . INTEIRO
    (79) numero -> . FLUTUANTE
    (80) numero -> . NOTACAO_CIENTIFICA

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 18
    FLUTUANTE       shift and go to state 20
    NEGACAO         shift and go to state 17
    ID              shift and go to state 13
    ABRE_PAR        shift and go to state 24
    ABRE_COL        shift and go to state 11
    SOMA            shift and go to state 28
    SUB             shift and go to state 5
    NOTACAO_CIENTIFICA shift and go to state 19

    atribuicao                     shift and go to state 2
    inicializacao_variaveis        shift and go to state 3
    numero                         shift and go to state 6
    expressao_aditiva              shift and go to state 8
    operador_soma                  shift and go to state 27
    declaracao_funcao              shift and go to state 22
    expressao_multiplicativa       shift and go to state 23
    expressao_simples              shift and go to state 9
    declaracao_variaveis           shift and go to state 15
    tipo                           shift and go to state 10
    declaracao                     shift and go to state 53
    var                            shift and go to state 25
    fator                          shift and go to state 12
    cabecalho                      shift and go to state 4
    chamada_funcao                 shift and go to state 26
    expressao_unaria               shift and go to state 1
    condicional                    shift and go to state 21

state 15

    (5) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> declaracao_variaveis .)
    NEGACAO         reduce using rule 5 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 5 (declaracao -> declaracao_variaveis .)
    ABRE_PAR        reduce using rule 5 (declaracao -> declaracao_variaveis .)
    ABRE_COL        reduce using rule 5 (declaracao -> declaracao_variaveis .)
    SOMA            reduce using rule 5 (declaracao -> declaracao_variaveis .)
    SUB             reduce using rule 5 (declaracao -> declaracao_variaveis .)
    NOTACAO_CIENTIFICA reduce using rule 5 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 5 (declaracao -> declaracao_variaveis .)


state 16

    (4) lista_declaracoes -> error .
